@@ -5,6 +5,7 @@ ver 0.23 (not yet released)
   - support "listfiles" with arbitrary storage plugins
   - support relative positions in "addid"
   - fix relative positions in "move" and "moveid"
+  - add "position" parameter to "findadd" and "searchadd"
 * database
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
